made the avatars for following an even number and fixed minor spacing issues

--- a/public/stylesheets/sass/style.sass
+++ b/public/stylesheets/sass/style.sass
@@ -2293,11 +2293,12 @@ textarea
 
 .avatars
   padding: 10px
+  padding-top: 0px
   img
     width: 41px !important
     height: 41px !important
-    margin-right  2px
     margin-bottom: 2px
+    margin-right: 3px
 
 [data-widget = "events-filter"]
   height: auto
